finalized site- changed link colors to white

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,6 @@
 body {
   color: white;
   font-family: Helvetica;
-  font-weight: bold;
   margin: auto;
   text-align: center;
 }
@@ -12,14 +11,18 @@ p {
 }
 h1 {
   background-image: url('../images/the-flatiron-building.png');
-  background-position: right;
+  background-position: center;
   background-repeat: no-repeat;
   font-size: 70px;
+  padding-bottom: 2px;
+  padding-top: 3px;
 }
-.contents {
+.contents, .contents a {
+  color: white;
   font-size: 18px;
-  font-weight: normal;
+  font-weight: bold;
 }
+
 h2 {
   color: black;
   font-size: 32px;
